[project]
name = "agent-conversation-reliability-pipeline"
version = "0.1.0"
description = "OutRival takehome: two bots in a Daily WebRTC room with reliability instrumentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
outrival-demo = "app.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["info*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "python-dotenv>=1.0.1",
]
